# python-backend-service

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/alembic/: env.py
{{cookiecutter.project_name}}/conf/: settings.py
{{cookiecutter.project_name}}/conf/envs/: dev.py  local.py  prod.py
{{cookiecutter.project_name}}/database/: __init__.py
{{cookiecutter.project_name}}/deployment/: start.sh
{{cookiecutter.project_name}}/docker/: Dockerfile.server
{{cookiecutter.project_name}}/nginx/: Dockerfile  nginx.conf
{{cookiecutter.project_name}}/service/: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/service/alembic/: env.py
{{cookiecutter.project_name}}/service/conf/: __init__.py  settings.py
{{cookiecutter.project_name}}/service/conf/envs/: dev.py  prod.py
{{cookiecutter.project_name}}/service/database/: __init__.py  utils.py
{{cookiecutter.project_name}}/service/database/models/: fields.py  models.py  schemas.py
{{cookiecutter.project_name}}/service/deployment/: pre_start.py
{{cookiecutter.project_name}}/service/deployment/celery/: beat.sh  celerybeat.conf  celeryd.conf  supervisord.conf  supervisord.sh  worker.sh
{{cookiecutter.project_name}}/service/deployment/docker/: Dockerfile  Dockerfile.celerybeat  Dockerfile.celeryd  Dockerfile.server
{{cookiecutter.project_name}}/service/deployment/server/: gunicorn_conf.py  server.sh
{{cookiecutter.project_name}}/service/services/: api.py  dependencies.py  schemas.py
{{cookiecutter.project_name}}/service/services/core/: __init__.py
{{cookiecutter.project_name}}/service/tests/: conftest.py
{{cookiecutter.project_name}}/service/worker/: app.py  beat.py
{{cookiecutter.project_name}}/services/: api.py  dependencies.py  schemas.py
{{cookiecutter.project_name}}/services/core/: __init__.py
{{cookiecutter.project_name}}/tests/: utils.py
{{cookiecutter.project_name}}/tests/crud/: conftest.py
{{cookiecutter.project_name}}/tests/services/: test_api.py  test_core.py
(+4 files in other folders)
