[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.8"
# Base
fastapi = "^0.42.0"
{% if cookiecutter.use_celery == "Yes" -%}
celery = {extras = ["redis"], version = "^4.4.5"}
{%- endif %}
{% if cookiecutter.use_postgres == "Yes" -%}
# Postgres
SQLAlchemy = "^1.3"
psycopg2-binary = "^2.8"
alembic = "^1.2"
{%- endif %}
{% if cookiecutter.use_mongo == "Yes" -%}
# Mongo
pymongo = "^3.10.1"
{%- endif %}
{% if (cookiecutter.use_celery == "Yes" or cookiecutter.use_redis == "Yes") -%}
# Redis
redis = "^3.5.3"
{%- endif %}
# Low level
ujson = "^1.35"
# Deploy
uvicorn = "^0.10.3"
gunicorn = "^20.0.4"
# Other
pydantic = "^0.32.2"
email-validator = "^1.0"
# Common
cachetools = "^4.1.0"
tenacity = "^6.2.0"

[tool.poetry.dev-dependencies]
# Lint
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.3"
isort = "^4.3"
unify = "^0.5.0"
# Typings
mypy = "^0.761.0"
# Test
pytest = "^5.3"
pytest-mock = "^1.13"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
